// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. daily universal register tablet slice - medium 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div>
      Daily Universal Register
    </div>
    <TileS />
    <div />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
    />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
    />
    <TileS />
  </div>
</div>
`;

exports[`2. lead one and one tablet slice - medium 1`] = `
<div>
  <div>
    <div>
      <TileU
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`3. lead one full width tablet slice - medium 1`] = `
<div>
  <TileR
    tileName="lead"
  />
</div>
`;

exports[`4. lead two no pic and two tablet slice - medium 1`] = `
<div>
  <div>
    <TileX
      tileName="lead1"
    />
    <div />
    <TileY
      tileName="lead2"
    />
    <div />
    <TileD
      tileName="support1"
    />
    <div />
    <TileZ
      tileName="support2"
    />
  </div>
</div>
`;

exports[`5. secondary one tablet slice - medium 1`] = `
<div>
  <TileW
    tileName="secondary"
  />
</div>
`;

exports[`6. secondary four tablet slice - medium 1`] = `
<div>
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary3"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`7. secondary one and columnist - medium 1`] = `
<div>
  <div>
    <div>
      <TileAA
        tileName="secondary"
      />
    </div>
    <div />
    <div>
      <TileAB
        tileName="columnist"
      />
    </div>
  </div>
</div>
`;

<<<<<<< HEAD
<<<<<<< HEAD
exports[`7. secondary one and columnist 1`] = `
=======
exports[`8. secondary two and two slice - medium 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileV
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileV
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <div>
        <TileG
          tileName="support1"
        />
      </div>
      <div />
      <div>
        <TileG
          tileName="support2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`9. secondary two no pic and two slice - medium 1`] = `
<div>
  <div>
    <div>
      <TileAE
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAE
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <div>
      <TileG
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileG
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`10. daily universal register tablet slice - wide 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div>
      Daily Universal Register
    </div>
    <TileS />
    <div />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
    />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
    />
    <TileS />
  </div>
</div>
`;

exports[`11. lead one and one tablet slice - wide 1`] = `
<div>
  <div>
    <div>
      <TileU
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`12. lead one full width tablet slice - wide 1`] = `
<div>
  <TileR
    tileName="lead"
  />
</div>
`;

exports[`13. lead two no pic and two tablet slice - wide 1`] = `
<div>
  <div>
    <TileX
      tileName="lead1"
    />
    <div />
    <TileY
      tileName="lead2"
    />
    <div />
    <TileD
      tileName="support1"
    />
    <div />
    <TileZ
      tileName="support2"
    />
  </div>
</div>
`;

exports[`14. secondary one tablet slice - wide 1`] = `
<div>
  <TileW
    tileName="secondary"
  />
</div>
`;

exports[`15. secondary four tablet slice - wide 1`] = `
<div>
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary3"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`16. secondary one and columnist - wide 1`] = `
>>>>>>> chore: Code review updates
<div>
  <div>
    <div>
      <TileAA
        tileName="secondary"
      />
    </div>
    <div />
    <div>
      <TileAB
        tileName="columnist"
      />
    </div>
  </div>
</div>
`;

<<<<<<< HEAD
exports[`8. secondary two and two slice 1`] = `
<div>
  <div>
    <div>
      <TileV
=======
exports[`17. secondary two and two slice - wide 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileV
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileV
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <div>
        <TileG
          tileName="support1"
        />
      </div>
      <div />
      <div>
        <TileG
          tileName="support2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`18. secondary two no pic and two slice - wide 1`] = `
<div>
  <div>
    <div>
      <TileAE
>>>>>>> chore: Code review updates
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
<<<<<<< HEAD
      <TileV
=======
      <TileAE
>>>>>>> chore: Code review updates
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
<<<<<<< HEAD
    <TileG
      tileName="support1"
    />
  </div>
  <div />
  <div>
    <TileG
      tileName="support2"
    />
=======
    <div>
      <TileG
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileG
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`19. daily universal register tablet slice - huge 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div>
      Daily Universal Register
    </div>
    <TileS />
    <div />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
    />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
    />
    <TileS />
>>>>>>> chore: Code review updates
  </div>
</div>
`;

<<<<<<< HEAD
exports[`9. lead one and four slice 1`] = `
<div>
  <TileAC
    tileName="lead"
  />
  <div>
    <TileAD
      tileName="support1"
    />
    <div />
    <TileAD
      tileName="support2"
    />
    <div />
    <TileAD
      tileName="support3"
    />
    <div />
    <TileAD
      tileName="support4"
=======
exports[`20. lead one and one tablet slice - huge 1`] = `
<div>
  <div>
    <div>
      <TileU
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`21. lead one full width tablet slice - huge 1`] = `
<div>
  <TileR
    tileName="lead"
  />
</div>
`;

exports[`22. lead two no pic and two tablet slice - huge 1`] = `
<div>
  <div>
    <TileX
      tileName="lead1"
    />
    <div />
    <TileY
      tileName="lead2"
    />
    <div />
    <TileD
      tileName="support1"
    />
    <div />
    <TileZ
      tileName="support2"
>>>>>>> chore: Code review updates
    />
  </div>
</div>
`;

<<<<<<< HEAD
exports[`10. secondary two no pic and two slice 1`] = `
=======
exports[`23. secondary one tablet slice - huge 1`] = `
<div>
  <TileW
    tileName="secondary"
  />
</div>
`;

exports[`24. secondary four tablet slice - huge 1`] = `
<div>
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary3"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`25. secondary one and columnist - huge 1`] = `
<div>
  <div>
    <div>
      <TileAA
        tileName="secondary"
      />
    </div>
    <div />
    <div>
      <TileAB
        tileName="columnist"
      />
    </div>
  </div>
</div>
`;

exports[`26. secondary two and two slice - huge 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileV
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileV
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <div>
        <TileG
          tileName="support1"
        />
      </div>
      <div />
      <div>
        <TileG
          tileName="support2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`27. secondary two no pic and two slice - huge 1`] = `
>>>>>>> chore: Code review updates
<div>
  <div>
    <div>
      <TileAE
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAE
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <div>
      <TileG
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileG
        tileName="support2"
      />
    </div>
  </div>
</div>
`;
<<<<<<< HEAD
=======
exports[`9. secondary two no pic and two slice 1`] = `<div />`;
>>>>>>> feat: Huge and Wide support for slices
=======
>>>>>>> chore: Code review updates
